<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue"
    tools:context=".AboutMe">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="-16dp"
        tools:layout_editor_absoluteY="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:background="@drawable/dark_bg">

                <ImageView
                    android:id="@+id/back_button"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="32dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@android:drawable/ic_menu_revert" />

                <TextView
                    android:id="@+id/Profile_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:text="@string/profile_title"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="-70dp">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/profile_pic"
                    android:layout_width="140dp"
                    android:layout_height="140dp"
                    android:layout_gravity="center"
                    android:scaleType="centerCrop"
                    android:src="@drawable/foto_diri"
                    app:shapeAppearanceOverlay="@style/roundedImageView"/>
            </FrameLayout>

            <TextView
                android:id="@+id/my_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="26dp"
                android:text="@string/my_name"
                android:textAlignment="center"
                android:textColor="@color/dark_blue"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/my_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/my_email"
                android:textAlignment="center"
                android:textSize="14sp" />


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="200dp"
                android:paddingBottom="20dp">

                <TextView
                    android:id="@+id/my_social_media"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="My social media"
                    android:textAlignment="center"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/my_facebook"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="16dp"
                    android:src="@drawable/facebook_app_symbol"
                    app:layout_constraintEnd_toEndOf="@+id/my_linkedin"
                    app:layout_constraintStart_toStartOf="@+id/my_instagram"
                    app:layout_constraintTop_toBottomOf="@+id/my_social_media" />

                <ImageView
                    android:id="@+id/my_instagram"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/my_facebook"
                    app:layout_constraintStart_toStartOf="parent"
                    android:src="@drawable/instagram"/>

                <ImageView
                    android:id="@+id/my_linkedin"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/linkedin"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/my_facebook" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>